# SAANCO

./: .gitmodules  CMakeLists.txt  README.md  configure
src/client/: client.css  client.html  client.js  dark.css  encryption.js  index.html  sentence_gen.js  storage.js  ugly.css  websocket.js
src/client/js/: client.js  encryption.js  random.js  storage.js  websocket.js
src/client/style/: client.css  dark.css  rainbow.css  ugly.css
src/master/: entry.c  entry.h  main.c  main.h  masterLogic.c  masterLogic.h  wsClient.c  wsClient.h  wsserver.c  wsserver.h
src/node-client/node-client/: node-client.sln  node-client.vcxproj  node-client.vcxproj.filters
src/node-client/node-client/Debug/: vc141.idb
src/node-client/node-client/Debug/node-client.tlog/: node-client.lastbuildstate
